Added click listeners on gridview item, launch MovieDetailActivity with intent. Passing myMovie object as Extra

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_movie_fragment">Hello Movie Fragment</string>
+    <string name="title_activity_movie_detail">MovieDetailActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
