--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_movie_fragment">Hello Movie Fragment</string>
-    <string name="title_activity_movie_detail">MovieDetailActivity</string>
+    <string name="title_activity_movie_detail">Movie Details</string>
     <string name="action_settings">Settings</string>
+    <string name="movie_poster">Movie Poster</string>
+    <string name="movie_title">Movie Title</string>
+    <string name="release_date">Release Date</string>
+    <string name="vote_avg">Vote Average</string>
+    <string name="movie_overview">Movie Overview</string>
 </resources>
